force-app/main/default/objects/Employment_Website__c/Employment_Website__c.object-meta.xml
<CustomObject>
    <label>Employment Website</label>
    <pluralLabel>Employment Websites</pluralLabel>
    <nameField>
        <label>Employment Website Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>