force-app/main/default/objects/Employment_Website__c/fields/Maximum_Budget__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Budget__c</fullName>
    <label>Maximum Budget</label>
    <type>Currency</type>
    <precision>6</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>