force-app/main/default/objects/Employment_Website__c/fields/Price_Per_Post__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Post__c</fullName>
    <label>Price Per Post</label>
    <type>Currency</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>